# gemma-global-competition

./: .gitignore  README.MD  finetune.ipynb  finetuneH100.ipynb  gemma_cs.ipynb  gemma_cs_multi.ipynb  gemma_cs_torch.ipynb  pyproject.toml  submission.ipynb
