[tool.poetry]
name = "gemma-czech-adaptation"
version = "0.1.0"
description = "A project for adapting Gemma language model for Czech language as part of the Gemma Language Model Tuning Competition"
authors = ["quant-eagle"]
readme = "README.md"
repository = "https://github.com/quant-eagle/gemma-global-competition"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
transformers = "^4.37.0"
scikit-learn = "^1.4.0"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"